# arpack-ds

./: CMakeLists.txt
.github/workflows/: build.yml
cmake/: arpackng-config.cmake.in
src/: CMakeLists.txt
src/arpack-ng/: CMakeLists.txt  arpack.h  arpack_internal.h  arpack_types.c  arpack_types.h  blas.h  f2c.c  lapack.h
src/arpack-ng/EXAMPLES/: CMakeLists.txt
src/arpack-ng/EXAMPLES/BAND/: cnband.c  cnbdr1.c  cnbdr2.c  cnbdr3.c  cnbdr4.c  dnband.c  dnbdr1.c  dnbdr2.c  dnbdr3.c  dnbdr4.c  dnbdr5.c  dnbdr6.c  dsband.c  dsbdr1.c  dsbdr2.c  dsbdr3.c  dsbdr4.c  dsbdr5.c  dsbdr6.c  snband.c  snbdr1.c  snbdr2.c  snbdr3.c  snbdr4.c  snbdr5.c  snbdr6.c  ssband.c  ssbdr1.c  ssbdr2.c  ssbdr3.c  ssbdr4.c  ssbdr5.c  ssbdr6.c  znband.c  znbdr1.c  znbdr2.c  znbdr3.c  znbdr4.c
src/arpack-ng/EXAMPLES/COMPLEX/: cndrv1.c  cndrv2.c  cndrv3.c  cndrv4.c  zndrv1.c  zndrv2.c  zndrv3.c  zndrv4.c
src/arpack-ng/EXAMPLES/NONSYM/: dndrv1.c  dndrv2.c  dndrv3.c  dndrv4.c  dndrv5.c  dndrv6.c  sndrv1.c  sndrv2.c  sndrv3.c  sndrv4.c  sndrv5.c  sndrv6.c
src/arpack-ng/EXAMPLES/SIMPLE/: cnsimp.c  dnsimp.c  dssimp.c  snsimp.c  sssimp.c  znsimp.c
src/arpack-ng/EXAMPLES/SVD/: dsvd.c  ssvd.c
src/arpack-ng/EXAMPLES/SYM/: dsdrv1.c  dsdrv2.c  dsdrv3.c  dsdrv4.c  dsdrv5.c  dsdrv6.c  ssdrv1.c  ssdrv2.c  ssdrv3.c  ssdrv4.c  ssdrv5.c  ssdrv6.c
src/arpack-ng/SRC/: ccdotc.c  cgetv0.c  cnaitr.c  cnapps.c  cnaup2.c  cnaupd.c  cneigh.c  cneupd.c  cngets.c  csortc.c  cstatn.c  dgetv0.c  dnaitr.c  dnapps.c  dnaup2.c  dnaupd.c  dnconv.c  dneigh.c  dneupd.c  dngets.c  dsaitr.c  dsapps.c  dsaup2.c  dsaupd.c  dsconv.c  dseigt.c  dsesrt.c  dseupd.c  dsgets.c  dsortc.c  dsortr.c  dstatn.c  dstats.c  dstqrb.c  sgetv0.c  snaitr.c  snapps.c  snaup2.c  snaupd.c  snconv.c  (+28 more)
src/arpack-ng/UTIL/: cmout.c  cvout.c  dmout.c  dvout.c  ivout.c  second.c  smout.c  svout.c  zmout.c  zvout.c
